config/admission.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission
  namespace: system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    logging.kubesphere.io/logsidecar-injector: $(INJECTOR_DEPLOY_NAME)
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-mutate
webhooks:
  - admissionReviewVersions:
      - v1beta1
    name: logsidecar-injector.logging.kubesphere.io
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    clientConfig:
      service:
        namespace: $(ADMISSION_SERVICE_NAMESPACE)
        name: $(ADMISSION_SERVICE_NAME)
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkRENDQWx5Z0F3SUJBZ0lKQUtPSEw0ZEZJdjd3TUEwR0NTcUdTSWIzRFFFQkN3VUFNRTh4Q3pBSkJnTlYKQkFZVEFrTk9NUXN3Q1FZRFZRUUlEQUpJUWpFTE1Ba0dBMVVFQ2d3Q1VVTXhKakFrQmdOVkJBTU1IV3h2WjNOcApaR1ZqWVhJdGFXNXFaV04wYjNJdFlXUnRhWE56YVc5dU1CNFhEVEl3TURReU5qRXdNREl3TTFvWERUUTNNRGt4Ck1qRXdNREl3TTFvd1R6RUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtoQ01Rc3dDUVlEVlFRS0RBSlIKUXpFbU1DUUdBMVVFQXd3ZGJHOW5jMmxrWldOaGNpMXBibXBsWTNSdmNpMWhaRzFwYzNOcGIyNHdnZ0VpTUEwRwpDU3FHU0liM0RR [...]
    namespaceSelector:
      matchExpressions:
      - key: logging.kubesphere.io/logsidecar-injection
        operator: In
        values:
        - enabled
    objectSelector:
      matchExpressions:
      - key: logging.kubesphere.io/logsidecar-injector
        operator: DoesNotExist
    sideEffects: None
